parser/src/snapshots/test__lexer::test::lex_int.snap
---
created: "2020-04-11T12:58:10.039051900Z"
creator: insta@0.8.2
source: parser/src/lexer.rs
expression: get_tokens(input)
---
[
    Span {
        value: Token {
            kind: INT_NUMBER,
            len: 2,
        },
        start: Position {
            column: 1,
            line: 1,
            absolute: 0,
        },
        end: Position {
            column: 3,
            line: 1,
            absolute: 2,
        },
    },
    Span {
        value: Token {
            kind: COMMA,
            len: 1,
        },
        start: Position {
            column: 3,
            line: 1,
            absolute: 2,
        },
        end: Position {
            column: 3,
            line: 1,
            absolute: 2,
        },
    },
    Span {
        value: Token {
            kind: INT_NUMBER,
            len: 2,
        },
        start: Position {
            column: 4,
            line: 1,
            absolute: 3,
        },
        end: Position {
            column: 6,
            line: 1,
            absolute: 5,
        },
    },
    Span {
        value: Token {
            kind: COMMA,
            len: 1,
        },
        start: Position {
            column: 6,
            line: 1,
            absolute: 5,
        },
        end: Position {
            column: 6,
            line: 1,
            absolute: 5,
        },
    },
    Span {
        value: Token {
            kind: COMMA,
            len: 1,
        },
        start: Position {
            column: 7,
            line: 1,
            absolute: 6,
        },
        end: Position {
            column: 7,
            line: 1,
            absolute: 6,
        },
    },
    Span {
        value: Token {
            kind: INT_NUMBER,
            len: 2,
        },
        start: Position {
            column: 8,
            line: 1,
            absolute: 7,
        },
        end: Position {
            column: 10,
            line: 1,
            absolute: 9,
        },
    },
    Span {
        value: Token {
            kind: COMMA,
            len: 1,
        },
        start: Position {
            column: 10,
            line: 1,
            absolute: 9,
        },
        end: Position {
            column: 10,
            line: 1,
            absolute: 9,
        },
    },
    Span {
        value: Token {
            kind: INT_NUMBER,
            len: 2,
        },
        start: Position {
            column: 11,
            line: 1,
            absolute: 10,
        },
        end: Position {
            column: 13,
            line: 1,
            absolute: 12,
        },
    },
    Span {
        value: Token {
            kind: COMMA,
            len: 1,
        },
        start: Position {
            column: 13,
            line: 1,
            absolute: 12,
        },
        end: Position {
            column: 13,
            line: 1,
            absolute: 12,
        },
    },
    Span {
        value: Token {
            kind: INT_NUMBER,
            len: 2,
        },
        start: Position {
            column: 14,
            line: 1,
            absolute: 13,
        },
        end: Position {
            column: 16,
            line: 1,
            absolute: 15,
        },
    },
    Span {
        value: Token {
            kind: COMMA,
            len: 1,
        },
        start: Position {
            column: 16,
            line: 1,
            absolute: 15,
        },
        end: Position {
            column: 16,
            line: 1,
            absolute: 15,
        },
    },
    Span {
        value: Token {
            kind: INT_NUMBER,
            len: 1,
        },
        start: Position {
            column: 17,
            line: 1,
            absolute: 16,
        },
        end: Position {
            column: 18,
            line: 1,
            absolute: 17,
        },
    },
    Span {
        value: Token {
            kind: EOF,
            len: 1,
        },
        start: Position {
            column: 18,
            line: 1,
            absolute: 17,
        },
        end: Position {
            column: 18,
            line: 1,
            absolute: 17,
        },
    },
]
