parser/src/snapshots/test__lexer::test::lex_nested_block_comments.snap
---
created: "2020-04-11T12:58:10.039099900Z"
creator: insta@0.8.2
source: parser/src/lexer.rs
expression: get_tokens(input)
---
[
    Span {
        value: Token {
            kind: COMMENT,
            len: 35,
        },
        start: Position {
            column: 1,
            line: 1,
            absolute: 0,
        },
        end: Position {
            column: 36,
            line: 1,
            absolute: 35,
        },
    },
    Span {
        value: Token {
            kind: EOF,
            len: 1,
        },
        start: Position {
            column: 36,
            line: 1,
            absolute: 35,
        },
        end: Position {
            column: 36,
            line: 1,
            absolute: 35,
        },
    },
]
